	values when the requested CGI variable was not found.
2015-12-30 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.5.0.
2015-12-30 Fred Gleason <fredg@paravelsystems.com>
	* Removed extraneous dependency for 'sy.pro' from 'src/wh/Makefile.am'.
2015-12-30 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.5.1.
2015-12-31 Fred Gleason <fredg@paravelsystems.com>
	* Added 'webhost.service.in'.
2016-01-03 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/wh/whcgipost.cpp' that thew an error when
	processing a CGI object with no POST fields.
2016-01-04 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.5.2.
2016-01-06 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'sync()' call after modifying system files in
	'src/webhostd/upgrade.cpp', 'src/webhostd/ip.cpp' and
	'src/webhostd/ntp.cpp'.
2016-01-06 Fred Gleason <fredg@paravelsystems.com>
	* Added additional parameters to the NTP configuration in
	'src/webhostd/ntp.cpp'.
2016-01-06 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.7.0.
2016-01-10 Fred Gleason <fredg@paravelsystems.com>
	* Added 'WHCgiPost::sendAddUserCommand()' and
	'WHCgiPost::sendDeleteUserCommand()' methods in 'sy/sycgipost.cpp'
	and 'sy/sycgipost.h'.
	* Implemented 'ADDUSER' and 'DELETEUSER' commands in
	'src/webhostd/users.cpp' and 'src/webhostd/webhostd.h'.
2016-01-16 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.7.1.
2016-01-18 Fred Gleason <fredg@paravelsystems.com>
	* Added 'WHCgiPage::onLoadEvent()' and 'WHCgiPage::setOnLoadEvent()'
	methods in 'wh/whcgipage.cpp' and 'wh/whcgipage.h'.
2016-01-18 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.0.
2016-01-22 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'version' argument to the constructor of the 'WHCmdSwitch'
	class in 'wh/whcmdswitch.cpp' and 'wh/whcmdswitch.h'.