@@ -128,3 +128,6 @@
 2016-01-22 Fred Gleason <fredg@paravelsystems.com>
 	* Added a 'version' argument to the constructor of the 'WHCmdSwitch'
 	class in 'wh/whcmdswitch.cpp' and 'wh/whcmdswitch.h'.
+2016-01-25 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'WHCgiPost::getValue()' method for QUrl in
+	'src/wh/whcgipost.cpp' and 'src/wh/whcgipost.h'.
